--- a/dutch.html
+++ b/dutch.html
@@ -33,27 +33,27 @@
         <div class="grid-container">
             <div>
                 <img src="images/endlessBeachHolland.jpg" alt="Endless beach in Holland">
-                <figcaption>Endless beach in Holland</figcaption>
+                <span>Endless beach in Holland</span>
             </div>
             <div>
                 <img src="images/lotsOfBiciclesInLeiden.jpg" alt="Lots of cycles in a street">
-                <figcaption>Cycling is very popular in Holland</figcaption>
+                <span>Cycling is very popular in Holland</span>
             </div>
             <div>
                 <img src="images/rotterdamSkyline.jpg" alt="Rotterdam skyline">
-                <figcaption>Rottedam skyline</figcaption>
+                <span>Rottedam skyline</span>
             </div>
             <div>
                 <img src="images/cyclingPathHolland.jpg" alt="Cycling path in the sand dunes">
-                <figcaption>Cycling in the sand dunes</figcaption>
+                <span>Cycling in the sand dunes</span>
             </div>
             <div>
                 <img src="images/beackHouseInHolland.jpg" alt="Beach house in Holland">
-                <figcaption>Beach house in Holland</figcaption>
+                <span>Beach house in Holland</span>
             </div>
             <div>
                 <img src="images/typicalNederlandOldTown.jpg" alt="typical old town houses with water">
-                <figcaption>Water is close everywhere</figcaption>
+                <span>Water is close everywhere</span>
             </div>
         </div>
     </main>
