--- a/hyeres.html
+++ b/hyeres.html
@@ -38,27 +38,27 @@
         <div class="grid-container">
             <div>
                 <img src="images/beach.jpg" alt="Beach on the island of Porquerolles">
-                <figcaption>Beach on the island of Porquerolles</figcaption>
+                <span>Beach on the island of Porquerolles</span>
             </div>
             <div>
                 <img src="images/giensRockCliff.jpg" alt="Rock cliff in the south of Giens">
-                <figcaption>The south of Giens has a rocky cliff</figcaption>
+                <span>The south of Giens has a rocky cliff</span>
             </div>
             <div>
                 <img src="images/culNuBeer.jpg" alt="Beer with girl on FKK beach">
-                <figcaption>Local beer with funny names</figcaption>
+                <span>Local beer with funny names</span>
             </div>
             <div>
                 <img src="images/hyeresBeach.jpg" alt="Beach between Hyeres and Giens">
-                <figcaption>Watersport beach between Hyéres and Giens</figcaption>
+                <span>Watersport beach between Hyéres and Giens</span>
             </div>
             <div>
                 <img src="images/islandInFrontOfGiens.jpg" alt="Island of Porquerolles">
-                <figcaption>Island of Porquerolles</figcaption>
+                <span>Island of Porquerolles</span>
             </div>
             <div>
                 <img src="images/hiddenBeachInTheRocks.jpg" alt="Hidden beach in the rocky cliffs">
-                <figcaption>Hidden beach in the south of Giens</figcaption>
+                <span>Hidden beach in the south of Giens</span>
             </div>
         </div>
     </main>
