--- a/jeri.html
+++ b/jeri.html
@@ -31,27 +31,27 @@
         <div class="grid-container">
             <div>
                 <img src="images/onWater.jpg" alt="Me on the water">
-                <figcaption>Me on the water</figcaption>
+                <span>Me on the water</span>
             </div>
             <div>
                 <img src="images/beachWithGirl.jpg" alt="Beach with view towards the surf area.">
-                <figcaption>Beach with view towards the surf area.</figcaption>
+                <span>Beach with view towards the surf area.</span>
             </div>
             <div>
                 <img src="images/foilAndBoardOnly.jpg" alt="Foil and board close up">
-                <figcaption>Foil and board close up</figcaption>
+                <span>Foil and board close up</span>
             </div>
             <div>
                 <img src="images/palmTrees.jpg" alt="View from the beach towards the village">
-                <figcaption>View from the beach towards the village</figcaption>
+                <span>View from the beach towards the village</span>
             </div>
             <div>
                 <img src="images/wingfoil.jpg" alt="Wing foil from above">
-                <figcaption>Wing foil from above</figcaption>
+                <span>Wing foil from above</span>
             </div>
             <div>
                 <img src="images/beachBar.jpg" alt="Beach bar">
-                <figcaption>Beach bar at Club Ventos</figcaption>
+                <span>Beach bar at Club Ventos</span>
             </div>
         </div>
     </main>
