--- a/index.html
+++ b/index.html
@@ -5,61 +5,54 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Colors</title>
+  <title>Final Project</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
-    <h1 id="top">Colors!</h1>
+    <h1 id="top">Vacation pictures</h1>
   </header>
 
   <main>
-    <h2>Basic Media Queries</h2>
-    <p>In this assignment you will add two media queries to the css file.</p>
-    <ul>
-      <li>The first media query should trigger at 772px and change the layout of the divs to be 45% of the viewport width. The images should have a maximum height of 30% of the viewport height.</li>
-
-      <li>The second media query should trigger at 998px and change the layout of the divs to be 30% of the viewport width.</li>
-    </ul>
-    <p>You will need to make additional changes to ensure that the divs appear next to each other and that the images are contained within the divs.  Some of these properties include display, width and max-height.</p>
-
-    <div>
-      <img src="images/Red.jpeg" alt="Red" >
-      <p class = "label">Red</p>
-    </div>
-    <div>
-      <img src="images/Orange.png" alt="Orange" >
-      <p class = "label">Orange</p>
-    </div>
-    <div>
-      <img src="images/Yellow.png" alt="Yellow" >
-      <p class = "label">Yellow</p>
-    </div>
-    <div>
-      <img src="images/Green.png" alt="Green" >
-      <p class = "label">Green</p>
-    </div>
-    <div>
-      <img src="images/Blue.png" alt="Blue" >
-      <p class = "label">Blue</p>
-    </div>
-    <div>
-      <img src="images/Indigo.jpeg" alt="Indigo" >
-      <p class = "label">Indigo</p>
-    </div>
-    <div>
-      <img src="images/Purple.png" alt="Purple" >
-      <p class = "label">Purple</p>
-    </div>
-    <div>
-      <img src="images/Pink.jpeg" alt="Pink" >
-      <p class = "label">Pink</p>
-    </div>
-    <div>
-      <img src="images/White.png" alt="White" >
-      <p class = "label">White</p>
-    </div>
+    <p>Some pictures from my vatation tripps to Jeriocacare in Brazil and France, Holland.</p>
+    <div class = "grid">
+        <figure>
+        <img src="images/beach.jpg" alt="Lonly beach in south of france">
+        <figcaption>Red</figcaption>
+        </figure>
+        <figure>
+        <img src="images/beachBar.jpg" alt="Bar at the beach" >
+        <figcaption>Orange</figcaption>
+        </figure>
+        <figure>
+        <img src="images/beachWithGirl.jpg" alt="Girl standing at the beach" >
+        <figcaption>Yellow</figcaption>
+        </figure>
+        <figure>
+        <img src="images/beackHouseInHolland.jpg" alt="Beach restaurant in Holland" >
+        <figcaption>Green</figcaption>
+        </figure>
+        <figure>
+        <img src="images/culNuBeer.jpg" alt="Beer bottle at table" >
+        <figcaption>Blue</figcaption>
+        </figure>
+        <figure>
+        <img src="images/drinkBoots.jpg" alt="Drink boots at the beach" >
+        <figcaption>Indigo</figcaption>
+        </figure>
+        <figure>
+        <img src="images/endlessBeachHolland.jpg" alt="Endless beach in Holland" >
+        <figcaption>Purple</figcaption>
+        </figure>
+        <figure>
+        <img src="images/foilAndBoardOnly.jpg" alt="Wing foil board in action" >
+        <figcaption>Pink</figcaption>
+        </figure>
+        <figure>
+        <img src="images/cyclingPathHolland.jpg" alt="Cycling path in Holland" >
+        <figcaption>White</figcaption>
+        </figure>
     </div>
   </main>
 
